<?xml version="1.0"?>
<package>
  <name>walk_engine</name>
  <version>0.0.0</version>
  <description>
    Walk engine
  </description>

  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>

  <license>MIT</license>
  <author email="gpassault@labri.fr">Grégoire Passault</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>robot_model</build_depend> <!-- rhoban/robot_model -->
  <build_depend>rhoban_utils</build_depend> <!-- rhoban/utils -->
  <build_depend>eigen</build_depend> <!-- rhobandeps/eigen -->

  <run_depend>robot_model</run_depend>
  <run_depend>rhoban_utils</run_depend>
  <run_depend>eigen</run_depend>

</package>
